
    o   The GNOME user interface was over-enthusiastic about setting
        locale information.  Now only LC_CTYPE, LC_COLLATE and LC_TIME
        are determined by the user's environment variables (PR#1321)

    o   In X11, locator() would sound the bell even if "xset b off"
        had been set.

    o	merge() could be confused by inconsistent use of as.character()
	giving leading spaces.

    o	levels<-.factor() was using correctly list values longer than
	the number of levels (PR#1394), and incorrectly documented
	that a character value could not be longer than the existing 
	levels.

    o   The pdf() device was running out of objects before the
	documented 500 page limit.  Now there is no limit.



	**************************************************
	*						 *
	*	       1.4 SERIES NEWS			 *
	*						 *
	**************************************************


		CHANGES IN R VERSION 1.4.1


BUG FIXES

    o	scan(multi.line = FALSE) now always gives an immediate error
	message if a line is incomplete. (As requested in PR#1210)

    o	read.table() is no longer very slow in processing comments:
	moved to C code and fewer lines checked.

    o	type.convert() could give stack imbalance warnings if used
	with as.is = TRUE.

    o	predict.mlm ignored newdata (PR#1226) and also offsets.

    o	demo(tkttest) was inadvertently changed in 1.4.0 so that it would
	evaluate the requested test, but not display the result.

    o	stars(scale = TRUE) (the default) now works as documented (and
	as S does).  Previously it only scaled the maximum to 1. (PR#1230)

    o	d0 <- data.frame(a = 0); data.matrix(d0[0, 0]) and
	data.matrix(d0[, 0]) now work.

    o	plot(multiple time series, plot.type = "single") was computing
	`ylim' from the first series only.

    o	plot.acf() has a new `xpd = par("xpd")' argument which by default
	*does* clipping (of the horizontal lines) as desired (xpd = NA was
	used before, erronously in most cases).
