@@ -412,6 +412,8 @@ BUG FIXES
     o	merge() could be confused by inconsistent use of as.character()
 	giving leading spaces.
 
+    o	Fixed socket writing code to block until all data is written.
+
     o	levels<-.factor() was using correctly list values longer than
 	the number of levels (PR#1394), and incorrectly documented
 	that a character value could not be longer than the existing 
